<resources>
    <string name="app_name" translatable="false">TEA KIDS</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">TEA KIDS</string>
    <string name="txt9">Encargado</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_gestion_pictograma">Gestión de Pictogramas</string>
    <string name="menu_mi_perfil">Mi perfil</string>
    <string name="menu_gestion_habilidad">Categorías de Habilidades Cotidianas</string>
    <string name="menu_gestion_juego">Gestión de Juegos Interactivos</string>
    <string name="menu_persona_tea">Lista de niños y niñas</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_preguntas_frecuentes">Preguntas Frecuentes</string>
    <string name="menu_cerrar_sesion">Cerrar Sesión</string>
    <string name="crear">Crear</string>
    <string name="guardar">Guardar</string>
    <string name="agregarNivel">Agregar Nivel</string>
    <string name="borrarNivel">Borrar Nivel</string>
    <string name="editarNivel">Editar Nivel</string>
    <string name="salir">Salir</string>
    <string name="opcion_menu_tea_vocabulario">Vocabulario</string>
    <string name="juegos_interactivos">Juegos Interactivos</string>
    <string name="habilidades_cotidianas">Habilidades Cotidianas</string>
    <string name="vocabulario">Vocabulario</string>
    <string name="frases">Frases</string>
    <string name="txt1">Bienvenido a</string>
    <string name="txt2" translatable="false">TEA KIDS</string>
    <string name="txt3">Términos y Condiciones</string>
    <string name="txt4">Al presionar Siguiente, usted acepta los Términos y Condiciones de TEA KIDS</string>
    <string name="button1">Siguiente</string>
    <string name="button2">Acceso directo</string>
    <string name="textarea">Cualquiera puede acceder a la aplicación TEA KIDS y utilizarla en diferentes medios (sin permiso previo) para actividades sin fines de lucro.
                           Todos los derechos de TEA KIDS son exclusivamente de la Universidad de El Salvador por tanto la institución no se hace responsable del uso indebido de la misma.
                           El uso de TEA KIDS NO sustituye una terapia de Lenguaje.</string>
    <string name="idioma"> Idioma </string>
    <string name="español">Español </string>
    <string name="ingles">Inglés </string>
    <string name="desbloqueo">Desbloqueo para juegos</string>
    <string name="porContrasena">Por Contraseña </string>
    <string name="porHuella">Por Huella </string>
    <string name="seleccionarIdioma">Seleccionar Idioma </string>
    <string name="seleccionarDesbloqueo">Seleccionar Desbloqueo </string>
    <string name="datos">Datos Generales</string>
    <string name="editarDatos">Editar Datos Generales</string>
    <string name="tituloCamContrasenia">Cambiar Contraseña</string>
    <string name="nombreUsuario">Nombre</string>
    <string name="apellidoUsuario">Apellido</string>
    <string name="NContrasenia">Nueva Contraseña</string>
    <string name="NContrasenia2">Confirmar Contraseña</string>
    <string name="correoUsuario">Correo</string>
    <string name="telefonoUsuario">Teléfono</string>
    <string name="spinnerPais" translatable="false">Pais</string>
    <string name="spinnerDepto" translatable="false">Departamento</string>
    <string name="spinnerMunicipio" translatable="false">Municipio</string>
    <string name="direccionUsuario" translatable="false">Direccion</string>
    <string name="contraUsuario">Contraseña de protección</string>
    <string name="siguienteUsuario">Siguiente</string>
    <string name="regresarUsuario">Regresar</string>
    <string name="titulo_validar_codigo">Ingresar código de validación</string>
    <string name="mensaje_validar_codigo">Se ha enviado un código a tu correo electrónico</string>
    <string name="campo_codigo">Código</string>
    <string name="button_validar">Validar</string>
    <string name="txt13">Nombre:</string>
    <string name="txt14">Apellido:</string>
    <string name="txt15">Edad:</string>
    <string name="txt16">Iniciar como Encargado:</string>
    <string name="txt17">Hola  </string>
    <string name="txt8">Acerca de TEA KIDS</string>
    <string name="txt10">Correo:</string>
    <string name="txt11">Seleccione un Perfil</string>
    <string name="txt12">Iniciar Como Encargado :</string>
    <string name="conexion_internet">Se necesita una conexión a Internet</string>
    <string name="miPerfil">Mi Perfil</string>
    <string name="txt5">Acceso con Contraseña</string>
    <string name="button3">Ingresar</string>
    <string name="txt6">Ingrese la Contraseña</string>
    <string name="txt7">¿Olvidaste tu contraseña?</string>
    <string name="accesojuegos">Acceso a Juegos Interactivos</string>
    <string name="huella">Usa tu huella dactilar para ingresar a esta opción</string>
    <string name="usarPass">Usar Contraseña</string>
    <string name="general" translatable="false">TEA KIDS es un software diseñado como herramienta de apoyo
        para el aprendizaje de la comunicación orientado
        a personas no verbales con trastornos del espectro autista.¡Gracias por utilizar TEA KIDS!</string>
    <string name="tituloDesarolladores">DESARROLLADORES</string>
    <string name="des1" translatable="false">Luis Alexander Aquino Avendaño</string>
    <string name="des2" translatable="false">Elsy Beatriz Campos Orellana</string>
    <string name="des3" translatable="false">Rosa Guadalupe Rodríguez Huezo</string>
    <string name="des4" translatable="false">Oscar Ramón Turish Guardado</string>
    <string name="tituloColaboradores">COLABORADORES</string>
    <string name="col1" translatable="false">Dra. Angela de Escobar</string>
    <string name="tituloTutores">TUTORES</string>
    <string name="tut1" translatable="false">Msc. José María Sanchez</string>
    <string name="tituloCreditos">CREDITOS</string>
    <string name="cre1" translatable="false">-Gard Game por Иван Капустин en lottiefiles.com</string>
    <string name="cre2" translatable="false">-Confetti on transparent background por Nataly Go en lottiefiles.com</string>
    <string name="cre3" translatable="false">-Empty box por Hoai Le en lottiefiles.com</string>
    <string name="cre4" translatable="false">-Cofetti long video por Tom Fabre en lottiefiles.com</string>
    <string name="cre5" translatable="false">-User por abdulrahman alfeky en lottiefiles.com</string>
    <string name="cre6" translatable="false">-Lock animation por Alex Füllenbach en lottiefiles.com</string>
    <string name="cre7" translatable="false">-Trophy por Lucas Nemo en lottiefiles.com</string>
    <string name="cre8" translatable="false">-Autor: Sergio Palao /Origen: ARASAAC (http://www.arasaac.org)
        Licencia: CC (BY-NC-SA) /Propiedad: Gobierno de Aragón (España)</string>
    <string name="cre9" translatable="false">-Vector de Fondo creado por freepik - www.freepik.es</string>
    <string name="cre10" translatable="false">-Vector de Personas creado por freepik - www.freepik.es</string>
    <string name="cre11" translatable="false">-Vector de Diseño creado por freepik - www.freepik.es</string>
    <string name="cre12" translatable="false">-Icono creado por: smashicons de www.flaticon.com</string>
    <string name="cre13" translatable="false">-Icono creado por: prosymbols de www.flaticon.com</string>
    <string name="cre14" translatable="false">-Icono creado por: eucalyp de www.flaticon.com</string>
    <string name="cre15" translatable="false">-Icono creado por: freepik de www.flaticon.com</string>
    <string name="cre16" translatable="false">-Icono creado por: becris de www.flaticon.com</string>
    <string name="cre17" translatable="false">-Icono creado por: kiranshastry de www.flaticon.com</string>
    <string name="agregarImg">¿Desea guardar como imagen principal de Categoría: </string>
    <string name="agregarImg2">el pictograma: </string>
    <string name="atencion">Atención </string>
    <string name="aceptar">Aceptar </string>
    <string name="categoria">Categoría:</string>
    <string name="CATEGORIA">CATEGORÍA:</string>
    <string name="buscar_pictogramas">Buscar Pictogramas</string>
    <string name="opcionMenuVocabluario">OPCIÓN MENÚ: Vocabulario</string>
    <string name="agregarImgJuego" translatable="false">¿Desea guardar como imagen principal del Juego: </string>
    <string name="campo_nombre">Nombre de Categoría</string>
    <string name="button_save">Guardar</string>
    <string name="vacio_cat_hab_cot">No se guardo, ya que el campo esta vacío.</string>
    <string name="titulo_cat_hab_cot">Nueva Categoría</string>
    <string name="titulo_edit_cat_hab_cot">Editar Categoría</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="datosTea">Nuevo Perfil</string>
    <string name="nombreTea">Nombre</string>
    <string name="apellidoTea">Apellido</string>
    <string name="fechaTea">fecha de nacimiento</string>
    <string name="SexoTea">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="foto">Foto</string>
    <string name="guardarPersona">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="actualizarTea">Actualizar Perfil</string>
    <string name="actualizarPersona">Actualizar</string>
    <string name="titulo_dialog_nuevo_pictograma">Nueva Imagen</string>
    <string name="hint_dialog_nuevo_pictograma">Nombre Imagen</string>
    <string name="button_elegir_imagen_nuevo_pictograma">Selecciona Imagen</string>
    <string name="button_guardar_imagen_nuevo_pictograma">Guardar</string>
    <string name="txt18">Nueva Imagen</string>
    <string name="txt19">Actualizar Imagen</string>
    <string name="pictograma">Pictograma</string>
    <string name="creaerFrases">Crear Frases</string>
    <string name="lista_vacia">UPS! ESTA CATEGORÍA ESTA VACÍA.</string>
    <string name="titulo_dialog_nueva_hab">Nueva Habilidad Cotidiana</string>
    <string name="hint_dialog_nueva_habilidad">Nombre Habilidad Cotidiana</string>
    <string name="pregunta_agregar_hab">¿Desea agregar un paso a la habilidad creada?</string>
    <string name="comentario_hab">**Si selecciona -Más tarde- podrá después agregar los pasos**</string>
    <string name="button_mas_tarde">Más tarde</string>
    <string name="button_si_agregar">Si</string>
    <string name="habilidad">"HABILIDAD:</string>
    <string name="crearSecuencia">Crear Secuencia</string>
    <string name="editSecuencia">Editar Secuencia</string>
    <string name="datosTera">Nuevo Registro</string>
    <string name="nombreTera">Nombre</string>
    <string name="apellidoTera">Apellido</string>
    <string name="correoTera">Correo</string>
    <string name="telefonoTera">Teléfono</string>
    <string name="cancelarTera">Cancelar</string>
    <string name="guardarTera">Guardar</string>
    <string name="nombreTeP">Nombre:</string>
    <string name="correoTeP">Correo:</string>
    <string name="telefonoTeP">Teléfono:</string>
    <string name="txtNueTera">Nuevo Terapeuta</string>
    <string name="txtModiTera">Modificar Terapeuta</string>
    <string name="tituloTerapeutaEncargado">Terapeutas encargados</string>
    <string name="detalle">Detalle</string>
    <string name="horaInicio">Hora Inicio Sesión</string>
    <string name="fecha">Fecha</string>
    <string name="accion">ACCIÓN</string>
    <string name="inicio">INICIO</string>
    <string name="fecham">FECHA</string>
</resources>