<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_mi_perfil"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_mi_perfil" />
        <item
            android:id="@+id/nav_gestion_pictograma"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gestion_pictograma" />
        <item
            android:id="@+id/nav_gestion_habilidad"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/menu_gestion_habilidad" />
        <item
            android:id="@+id/nav_gestion_juego"
            android:icon="@drawable/ic_videogame_asset_black_24dp"
            android:title="@string/menu_gestion_juego" />
        <item
            android:id="@+id/nav_menu_persona_tea"
            android:icon="@drawable/ic_add_person"
            android:title="@string/menu_persona_tea" />


    </group>
</menu>
