<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.apptea.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home">


    </fragment>


    <fragment
        android:id="@+id/nav_gestion_pictograma"
        android:name="com.example.apptea.ui.home.HomeFragment"
        android:label="@string/menu_gestion_pictograma"
        tools:layout="@layout/fragment_gestion_pictograma" />

    <fragment
        android:id="@+id/nav_registro_perfil"
        android:name="com.example.apptea.ui.home.HomeFragment"
        android:label="@string/menu_registro_perfil"
        tools:layout="@layout/fragment_registro_perfil" />

    <fragment
        android:id="@+id/nav_gestion_habilidad"
        android:name="com.example.apptea.ui.home.HomeFragment"
        android:label="@string/menu_gestion_habilidad"
        tools:layout="@layout/fragment_gestion_habilidad" />

    <fragment
        android:id="@+id/nav_gestion_juego"
        android:name="com.example.apptea.ui.home.HomeFragment"
        android:label="@string/menu_gestion_juego"
        tools:layout="@layout/fragment_gestion_juego" />
</navigation>